--- a/Create_Acct/style1.css
+++ b/Create_Acct/style1.css
@@ -5,7 +5,8 @@ body {
 }
 
 form{
-	max-width: 250px;
+	opacity: 0.7;
+	max-width: 450px;
 	max-height: 900px;
 	margin: 10px auto;
 	padding: 5px 5px;
