--- a/Create_Acct/style1.css
+++ b/Create_Acct/style1.css
@@ -6,8 +6,8 @@ body {
 
 form{
 	opacity: 0.7;
-	max-width: 450px;
-	max-height: 900px;
+	width: 450px;
+	height: 750px;
 	margin: 10px auto;
 	padding: 5px 5px;
 	background: #f4f7f8;
