--- a/Create_Acct/style1.css
+++ b/Create_Acct/style1.css
@@ -4,12 +4,16 @@ body {
 	color: #384047;
 }
 
+@media screen and (min-width: 550px){
+
 form{
 	opacity: 0.7;
-	width: 650px;
-	height: 750px;
+	width: 550px;
+	height: 1200px;
 	margin: 10px auto;
 	padding: 5px 5px;
 	background: #f4f7f8;
-	border-radius: 8px;	
+	border-radius: 8px;
+	font-size:xx-large;
+}
 }
