--- a/Create_Acct/style2.css
+++ b/Create_Acct/style2.css
@@ -5,10 +5,11 @@ body {
 }
 
 form{
-	max-width: 250px;
+	opacity: 0.6;
+	max-width: 550px;
 	max-height: 900px;
 	margin: 10px auto;
 	padding: 5px 5px;
 	background: #f49F9C;
-	border-radius: 8px;	
+	border-radius: 8px;		
 }
