--- a/Create_Acct/style2.css
+++ b/Create_Acct/style2.css
@@ -11,5 +11,6 @@ form{
 	margin: 10px auto;
 	padding: 5px 5px;
 	background: #f49F9C;
-	border-radius: 8px;		
+	border-radius: 8px;
+	font-size:xx-large;
 }
